# python-sdk

./: .gitignore  BUILD.bazel  README.md  setup.py
examples/: debug_dial.py  events_wt.txt  openai_realtime_demux.py  test_audio_io.py  test_dial.py  test_http3.py  test_webtransport.py
telequick/: auth.py  client.py  media.py  method_id.py
tests/: test_sdk.py
